# grpc-test

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  readme.md
proto/: helloworld.proto
src/: client.rs  server.rs
